--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^4.12.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-highlight-words": "^0.17.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
